SSC-XX fix cruise header cta btn alignment

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-general.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-general.less
@@ -225,10 +225,5 @@
 
     .btn.btn-thin {
         padding: 8px 20px;
-
-        i {
-            position: relative;
-            bottom: -1px;
-        }
     }
 }
