--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-header.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-header.less
@@ -67,15 +67,16 @@
             vertical-align: top;
             text-align: center;
 
-            /* phone breakpoint */
+            .btn i {
+                position: relative;
+                top: 1px;
+            }
+
             @media screen and (max-width: @screen-sm) {
                 display: block;
                 padding: 0;
-            }
 
-            a {
-                /* phone breakpoint */
-                @media screen and (max-width: @screen-sm) {
+                a {
                     width: auto;
                     display: inline-block !important;
                     margin: 0 0 10px 0;
